<resources>
    <string name="app_name">FxGrow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="please_enter_your_email_amp_password"><![CDATA[Please enter your Email & Password]]></string>
    <string name="authentication">Authentication</string>
    <string name="enter_email">Enter email</string>
    <string name="continue_">Continue</string>
    <string name="enter_password">Enter password</string>
    <string name="signup">Signup</string>
    <string name="back_button">Back button</string>
    <string name="first_name">First Name</string>
    <string name="open_whatsapp">Open whatsapp</string>
</resources>