<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_15sdp"
    android:paddingVertical="@dimen/_10sdp"
    tools:context=".ui.LoginActivity"
    tools:ignore="ContentDescription">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/prompt_bold"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_body"
        android:layout_below="@id/header"
        android:src="@drawable/ic_login" />

    <LinearLayout
        android:id="@+id/ll_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt_bold"
            android:text="@string/authentication"
            android:textColor="#1C2A4D"
            android:textSize="@dimen/_30sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt_medium"
            android:text="@string/please_enter_your_email_amp_password"
            android:textColor="#1C2A4D"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_background"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_15sdp">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:autofillHints="emailAddress"
                android:background="@color/light_gray"
                android:fontFamily="@font/prompt_regular"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/edit_text_color"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_background"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_15sdp">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:autofillHints="password"
                android:background="@color/light_gray"
                android:fontFamily="@font/prompt_regular"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/edit_text_color"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/prompt_bold"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_13sdp"
            android:text="@string/continue_"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

</RelativeLayout>